test/e2e/fixtures/tracing-external-auth/queries-warmup.json
[
  {"url": "/target/warmup", "method": "GET"},
  {"url": "/zipkin/api/v2/services", "method": "GET"}
]
